cleaned some code in map.jsx styling, got geolocate control to display properly on canvas, need to fix problem of whitespace between canvas and footer

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -60,3 +60,8 @@ body {
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+
+.mapboxgl-map {
+  height: 50vh;
+  width: 100vw;
+}
